--- a/readings.html
+++ b/readings.html
@@ -224,22 +224,17 @@
                                 ДИАГНОСТИКА ПАРЫ
                             </h3>
                             <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                                Поможет понять, в чём истинные проблемы между вами, чему эти отношения вас учат и есть
+                                ли шанс всё исправить. Подходит, если вы чувствуете, что любовь осталась, но стало
+                                тяжело.
                             </p>
                             <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?
-
-                                </li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
-                                <li>Совет от карт.</li>
+                                <li>По судьбе ли он?</li>
+                                <li>Почему проблемы между вами?</li>
+                                <li>Что сделать, чтобы улучшить отношения?</li>
+                                <li>Чему вас учат эти отношения?</li>
+                                <li>Перспективы отношений между вами? </li>
+                                <li>Были ли измены?</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">4 000 ₽</p>
@@ -253,19 +248,18 @@
                                 ЛЮБОВНЫЙ ТРЕУГОЛЬНИК
                             </h3>
                             <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                                Разберёт, что он чувствует к вам и к ней, какие у него истинные намерения и к кому в
+                                итоге тянет сильнее. Расклад для тех, кто хочет понять, чью сторону он выберет.
                             </p>
                             <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>
+                                    Его чувства к вам.
+                                </li>
+                                <li>Его чувства к ней</li>
+                                <li>Его истинные намерения к вам.</li>
+                                <li>Его истинные намерения к ней.</li>
+                                <li>Развитие отношений с вами.</li>
+                                <li>Развитие отношений с ней.</li>
                                 <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
