--- a/diagnostics.html
+++ b/diagnostics.html
@@ -351,22 +351,16 @@
                         <h3 class="diag-card-title">«Диагностика пары»</h3>
                         <p class="diag-card-tag">Диагностика</p>
                         <p class="diag-card-text">
-                            Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                            Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
+                            Поможет понять, в чём истинные проблемы между вами, чему эти отношения вас учат и есть ли
+                            шанс всё исправить. Подходит, если вы чувствуете, что любовь осталась, но стало тяжело.
                         </p>
                         <ul class="diag-points">
-                            <li>Что он чувствует ко мне?</li>
-                            <li>Что я для него значу в целом?</li>
-                            <li>Что он скрывает от меня?</li>
-                            <li>Есть ли у него другая женщина?</li>
-                            <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?
-
-                            </li>
-                            <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                            <li>Что он планирует предпринять в ближайшее время?</li>
-                            <li>Как мне дальше поступить?</li>
-                            <li>Перспективы наших отношений на полгода.</li>
-                            <li>Совет от карт.</li>
+                            <li>По судьбе ли он?</li>
+                            <li>Почему проблемы между вами?</li>
+                            <li>Что сделать, чтобы улучшить отношения?</li>
+                            <li>Чему вас учат эти отношения?</li>
+                            <li>Перспективы отношений между вами? </li>
+                            <li>Были ли измены?</li>
                         </ul>
                         <p class="diag-price">4 000 ₽</p>
                         <a href="#contact" class="diag-link">
