Add new on БЫВШЕГО

--- a/readings.html
+++ b/readings.html
@@ -149,7 +149,7 @@
                         Для тех, кто устал от качелей, хочет понять партнёра или наконец встретить своего человека.
                     </p>
                 </div>
-
+                <!-- Карусель раскладов про любовь - 1 - НА ИЗМЕНУ -->
                 <div class="readings-carousel">
                     <div class="readings-carousel-header">
                         <button class="readings-nav-btn" type="button" data-dir="prev"
@@ -268,145 +268,128 @@
                                 Запросить расклад
                             </a>
                         </article>
-                        <article class="reading-card">
-                            <h3 class="reading-title">
-                                ОН + ОНА
-                            </h3>
-                            <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
-                            </p>
-                            <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
-                                <li>Совет от карт.</li>
-                            </ul>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
-                        <article class="reading-card">
-                            <h3 class="reading-title">
-                                ОН + ОНА
-                            </h3>
-                            <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
-                            </p>
-                            <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
-                                <li>Совет от карт.</li>
-                            </ul>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
-                        <article class="reading-card">
-                            <h3 class="reading-title">
-                                ОН + ОНА
-                            </h3>
-                            <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
-                            </p>
-                            <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
-                                <li>Совет от карт.</li>
-                            </ul>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
-                        <article class="reading-card">
-                            <h3 class="reading-title">
-                                ОН + ОНА
-                            </h3>
-                            <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
-                            </p>
-                            <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
-                                <li>Совет от карт.</li>
-                            </ul>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
-                        <article class="reading-card">
-                            <h3 class="reading-title">
-                                ОН + ОНА
-                            </h3>
-                            <p class="reading-lead">
-                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
-                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
-                            </p>
-                            <ul class="reading-questions">
-                                <li>Что он чувствует ко мне?</li>
-                                <li>Что я для него значу в целом?</li>
-                                <li>Что он скрывает от меня?</li>
-                                <li>Есть ли у него другая женщина?</li>
-                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
-                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
-                                <li>Что он планирует предпринять в ближайшее время?</li>
-                                <li>Как мне дальше поступить?</li>
-                                <li>Перспективы наших отношений на полгода.</li>
-                                <li>Совет от карт.</li>
-                            </ul>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
+                    </div>
+                </div>
+                <!-- Карусель раскладов про любовь - 1 - НА БЫВШЕГО -->
+                <div class="readings-carousel">
+                    <div class="readings-carousel-header">
+                        <button class="readings-nav-btn" type="button" data-dir="prev"
+                            aria-label="Предыдущий расклад">‹</button>
+                        <div class="readings-carousel-title">НА БЫВШЕГО</div>
+                        <button class="readings-nav-btn" type="button" data-dir="next"
+                            aria-label="Следующий расклад">›</button>
+                    </div>
 
+                    <div class="readings-track" aria-label="Расклады про любовь">
+                        <!-- Расклады про любовь - 1 - ОН + ОНА -->
                         <article class="reading-card">
-                            <h3 class="reading-title">Наши отношения: перспективы</h3>
-                            <p class="reading-text">
-                                Для тех, кто уже в связке и не понимает, есть ли будущее, что чувствует партнёр и куда
-                                всё идёт.
+                            <h3 class="reading-title">
+                                ОН + ОНА
+                            </h3>
+                            <p class="reading-lead">
+                                Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
+                                Расклад показывает, что он чувствует, что скрывает и есть ли другая женщина.
                             </p>
-                            <p class="reading-meta">Формат: аудио-разбор + рекомендации</p>
+                            <ul class="reading-questions">
+                                <li>Что он чувствует ко мне?</li>
+                                <li>Что я для него значу в целом?</li>
+                                <li>Что он скрывает от меня?</li>
+                                <li>Есть ли у него другая женщина?</li>
+                                <li>Если есть — какие у них отношения? Если нет — откуда у меня подозрения?</li>
+                                <li>Причина возможной измены. Склонен ли он к изменам вообще?</li>
+                                <li>Что он планирует предпринять в ближайшее время?</li>
+                                <li>Как мне дальше поступить?</li>
+                                <li>Перспективы наших отношений на полгода.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 2 - ЕГО ОДИНОЧЕСТВО -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ЕГО ОДИНОЧЕСТВО
+                            </h3>
+                            <p class="reading-lead">
+                                Расклад для тех, кто находится на грани развода/расставания
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Какие истинные мотивы и намерения у партнёра в контексте брака и возможного развода?
+                                </li>
+                                <li>
+                                    Какова реальная причина его потребности в одиночестве и отдалении?
+                                </li>
+                                <li>
+                                    Что он пытается найти в этом процессе?
+                                </li>
+                                <li>Есть ли у него другие отношения?</li>
+                                <li>Что он от вас скрывает?</li>
+                                <li>Кто вы для него истинно?/Какие у него истинные чувства к вам? </li>
+                                <li>Честен ли он с вами?</li>
+                                <li>Сможет ли он понять, что ваши отношения все таки нужны ему?</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 3 - ДИАГНОСТИКА ПАРЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ДИАГНОСТИКА ПАРЫ
+                            </h3>
+                            <p class="reading-lead">
+                                Поможет понять, в чём истинные проблемы между вами, чему эти отношения вас учат и есть
+                                ли шанс всё исправить. Подходит, если вы чувствуете, что любовь осталась, но стало
+                                тяжело.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>По судьбе ли он?</li>
+                                <li>Почему проблемы между вами?</li>
+                                <li>Что сделать, чтобы улучшить отношения?</li>
+                                <li>Чему вас учат эти отношения?</li>
+                                <li>Перспективы отношений между вами? </li>
+                                <li>Были ли измены?</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - 4 - ЛЮБОВНЫЙ ТРЕУГОЛЬНИК -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ЛЮБОВНЫЙ ТРЕУГОЛЬНИК
+                            </h3>
+                            <p class="reading-lead">
+                                Разберёт, что он чувствует к вам и к ней, какие у него истинные намерения и к кому в
+                                итоге тянет сильнее. Расклад для тех, кто хочет понять, чью сторону он выберет.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Его чувства к вам.
+                                </li>
+                                <li>Его чувства к ней</li>
+                                <li>Его истинные намерения к вам.</li>
+                                <li>Его истинные намерения к ней.</li>
+                                <li>Развитие отношений с вами.</li>
+                                <li>Развитие отношений с ней.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">6 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
                         </article>
                     </div>
-
                 </div>
             </div>
         </section>
