Add new on БЫВШЕГО all sections

--- a/readings.html
+++ b/readings.html
@@ -281,10 +281,10 @@
                     </div>
 
                     <div class="readings-track" aria-label="Расклады про любовь">
-                        <!-- Расклады про любовь - 1 - ОН + ОНА -->
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 1 - ЧТО ТАМ У БЫВШЕГО -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                ОН + ОНА
+                                ЧТО ТАМ У БЫВШЕГО
                             </h3>
                             <p class="reading-lead">
                                 Для тех, кто чувствует ложь, недосказанность или подозревает соперницу.
@@ -303,12 +303,93 @@
                                 <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
-                            <p class="reading-price">6 000 ₽</p>
+                            <p class="reading-price">4 000 ₽</p>
                             <a href="#contact" class="reading-link" aria-label="Запросить расклад">
                                 Запросить расклад
                             </a>
                         </article>
-                        <!-- Расклады про любовь - 2 - ЕГО ОДИНОЧЕСТВО -->
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 2 - НЕ ПИШЕТ И НЕ ЗВОНИТ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                НЕ ПИШЕТ И НЕ ЗВОНИТ
+                            </h3>
+                            <p class="reading-lead">
+                                Расклад для тех, кто находится на грани развода/расставания
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Какие истинные мотивы и намерения у партнёра в контексте брака и возможного развода?
+                                </li>
+                                <li>
+                                    Какова реальная причина его потребности в одиночестве и отдалении?
+                                </li>
+                                <li>
+                                    Что он пытается найти в этом процессе?
+                                </li>
+                                <li>Есть ли у него другие отношения?</li>
+                                <li>Что он от вас скрывает?</li>
+                                <li>Кто вы для него истинно?/Какие у него истинные чувства к вам? </li>
+                                <li>Честен ли он с вами?</li>
+                                <li>Сможет ли он понять, что ваши отношения все таки нужны ему?</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 3 - ПОМИРИМСЯ ЛИ МЫ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ПОМИРИМСЯ ЛИ МЫ
+                            </h3>
+                            <p class="reading-lead">
+                                Поможет понять, в чём истинные проблемы между вами, чему эти отношения вас учат и есть
+                                ли шанс всё исправить. Подходит, если вы чувствуете, что любовь осталась, но стало
+                                тяжело.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>По судьбе ли он?</li>
+                                <li>Почему проблемы между вами?</li>
+                                <li>Что сделать, чтобы улучшить отношения?</li>
+                                <li>Чему вас учат эти отношения?</li>
+                                <li>Перспективы отношений между вами? </li>
+                                <li>Были ли измены?</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">3 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 4 - ОН ПОД ПРИЦЕЛОМ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                ОН ПОД ПРИЦЕЛОМ
+                            </h3>
+                            <p class="reading-lead">
+                                Разберёт, что он чувствует к вам и к ней, какие у него истинные намерения и к кому в
+                                итоге тянет сильнее. Расклад для тех, кто хочет понять, чью сторону он выберет.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Его чувства к вам.
+                                </li>
+                                <li>Его чувства к ней</li>
+                                <li>Его истинные намерения к вам.</li>
+                                <li>Его истинные намерения к ней.</li>
+                                <li>Развитие отношений с вами.</li>
+                                <li>Развитие отношений с ней.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 5 - ЕГО ОДИНОЧЕСТВО -->
                         <article class="reading-card">
                             <h3 class="reading-title">
                                 ЕГО ОДИНОЧЕСТВО
@@ -339,23 +420,25 @@
                                 Запросить расклад
                             </a>
                         </article>
-                        <!-- Расклады про любовь - 3 - ДИАГНОСТИКА ПАРЫ -->
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 6 - ВОКЗАЛ ДЛЯ ДВОИХ -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                ДИАГНОСТИКА ПАРЫ
+                                ВОКЗАЛ ДЛЯ ДВОИХ
                             </h3>
                             <p class="reading-lead">
-                                Поможет понять, в чём истинные проблемы между вами, чему эти отношения вас учат и есть
-                                ли шанс всё исправить. Подходит, если вы чувствуете, что любовь осталась, но стало
-                                тяжело.
+                                Разберёт, что он чувствует к вам и к ней, какие у него истинные намерения и к кому в
+                                итоге тянет сильнее. Расклад для тех, кто хочет понять, чью сторону он выберет.
                             </p>
                             <ul class="reading-questions">
-                                <li>По судьбе ли он?</li>
-                                <li>Почему проблемы между вами?</li>
-                                <li>Что сделать, чтобы улучшить отношения?</li>
-                                <li>Чему вас учат эти отношения?</li>
-                                <li>Перспективы отношений между вами? </li>
-                                <li>Были ли измены?</li>
+                                <li>
+                                    Его чувства к вам.
+                                </li>
+                                <li>Его чувства к ней</li>
+                                <li>Его истинные намерения к вам.</li>
+                                <li>Его истинные намерения к ней.</li>
+                                <li>Развитие отношений с вами.</li>
+                                <li>Развитие отношений с ней.</li>
+                                <li>Совет от карт.</li>
                             </ul>
                             <p class="reading-meta">Формат: аудио-разбор</p>
                             <p class="reading-price">4 000 ₽</p>
@@ -363,10 +446,36 @@
                                 Запросить расклад
                             </a>
                         </article>
-                        <!-- Расклады про любовь - 4 - ЛЮБОВНЫЙ ТРЕУГОЛЬНИК -->
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 7 - ИГНОР СО СТОРОНЫ ПАРТНЕРА -->
                         <article class="reading-card">
                             <h3 class="reading-title">
-                                ЛЮБОВНЫЙ ТРЕУГОЛЬНИК
+                                ИГНОР СО СТОРОНЫ ПАРТНЕРА
+                            </h3>
+                            <p class="reading-lead">
+                                Разберёт, что он чувствует к вам и к ней, какие у него истинные намерения и к кому в
+                                итоге тянет сильнее. Расклад для тех, кто хочет понять, чью сторону он выберет.
+                            </p>
+                            <ul class="reading-questions">
+                                <li>
+                                    Его чувства к вам.
+                                </li>
+                                <li>Его чувства к ней</li>
+                                <li>Его истинные намерения к вам.</li>
+                                <li>Его истинные намерения к ней.</li>
+                                <li>Развитие отношений с вами.</li>
+                                <li>Развитие отношений с ней.</li>
+                                <li>Совет от карт.</li>
+                            </ul>
+                            <p class="reading-meta">Формат: аудио-разбор</p>
+                            <p class="reading-price">4 000 ₽</p>
+                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
+                                Запросить расклад
+                            </a>
+                        </article>
+                        <!-- Расклады про любовь - НА БЫВШЕГО - 8 - РАЗБИТОЕ СЕРДЦЕ -->
+                        <article class="reading-card">
+                            <h3 class="reading-title">
+                                РАЗБИТОЕ СЕРДЦЕ
                             </h3>
                             <p class="reading-lead">
                                 Разберёт, что он чувствует к вам и к ней, какие у него истинные намерения и к кому в
@@ -389,66 +498,7 @@
                                 Запросить расклад
                             </a>
                         </article>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <!-- Блок 3: Деньги -->
-        <section id="money" class="readings-section alt">
-            <div class="container">
-                <div class="readings-header">
-                    <h2 class="section-title">Расклады про деньги и дело</h2>
-                    <p class="readings-subtitle">
-                        Когда деньги утекают сквозь пальцы, работа не радует или вы чувствуете, что можете больше.
-                    </p>
-                </div>
-
-                <div class="readings-carousel">
-                    <div class="readings-carousel-header">
-                        <button class="readings-nav-btn" type="button" data-dir="prev"
-                            aria-label="Предыдущий расклад">‹</button>
-                        <div class="readings-carousel-title">Деньги и реализация</div>
-                        <button class="readings-nav-btn" type="button" data-dir="next"
-                            aria-label="Следующий расклад">›</button>
-                    </div>
-
-                    <div class="readings-track" aria-label="Расклады про деньги и дело">
-                        <article class="reading-card">
-                            <h3 class="reading-title">Деньги и я</h3>
-                            <p class="reading-text">
-                                Ваши установки о деньгах, родовые сценарии и то, что прямо сейчас перекрывает финансовый
-                                поток.
-                            </p>
-                            <p class="reading-meta">Формат: аудио-разбор 40–60 минут</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
-
-                        <article class="reading-card">
-                            <h3 class="reading-title">Моё дело / призвание</h3>
-                            <p class="reading-text">
-                                Где ваша сила, в какой активности вы раскрываетесь и что мешает сделать шаг к своему
-                                делу.
-                            </p>
-                            <p class="reading-meta">Формат: аудио-разбор + вектор движения</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
-
-                        <article class="reading-card">
-                            <h3 class="reading-title">Почему не растёт доход</h3>
-                            <p class="reading-text">
-                                Что стопорит увеличение дохода: страхи, лояльность роду, внутренние запреты «мне
-                                нельзя».
-                            </p>
-                            <p class="reading-meta">Формат: аудио-разбор</p>
-                            <a href="#contact" class="reading-link" aria-label="Запросить расклад">
-                                Запросить расклад
-                            </a>
-                        </article>
                     </div>
                 </div>
             </div>
