Add logo to all pages

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -38,7 +38,10 @@
 
     <header class="diag-header">
         <div class="container diag-header-inner">
-            <div class="logo">Стук сердца</div>
+            <div class="logo-container">
+                <img src="assets/images/logo-site-no-bg.png" alt="Стук сердца logo" class="logo-image">
+                <p class="logo">Стук сердца</p>
+            </div>
             <nav class="diag-nav">
                 <a href="index.html#top">Главная</a>
                 <a href="index.html#products">Продукты</a>
