--- a/meditations/wish-fulfillment.html
+++ b/meditations/wish-fulfillment.html
@@ -47,7 +47,10 @@
 <body>
     <header>
         <div class="container header-inner">
-            <div class="logo">Стук сердца</div>
+            <div class="logo-container">
+                <img src="assets/images/logo-site-no-bg.png" alt="Стук сердца logo" class="logo-image">
+                <p class="logo">Стук сердца</p>
+            </div>
 
             <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" aria-controls="mobile-menu">
                 <span></span>
