Add favicon to all pages

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/images/favicon-site/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon-site/favicon.svg" />
+    <link rel="shortcut icon" href="assets/images/favicon-site/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon-site/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/images/favicon-site/site.webmanifest" />
 
 </head>
 
